Monthly Statistics first attempt

--- a/src/main/resources/static/views/statistics.html
+++ b/src/main/resources/static/views/statistics.html
@@ -1,5 +1,9 @@
 <div class="container" role="main" class="main">
   <div class="starter-template">
-    <H1>Statistics</H1>
+  </div>
+  <div class="starter-template">
+    <div ng-controller="statistics">
+      <div id="grid3" ui-grid="gridOptions" ui-grid-exporter class="grid"></div>
+    </div>
   </div>
 </div>
