--- a/src/main/resources/static/views/statistics.html
+++ b/src/main/resources/static/views/statistics.html
@@ -7,6 +7,64 @@
     <!--</div>-->
   <!--</div>-->
 
+  <div class="page-header">
+
+    <div class="row">
+
+      <div class="col-md-3">
+        <div class="panel panel-success">
+          <div class="panel-heading"><h3 class="panel-title">ΑVG Yearly Income</h3></div>
+          <div class="panel-body">0</div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="panel panel-danger">
+          <div class="panel-heading"><h3 class="panel-title">ΑVG Yearly Expense</h3></div>
+          <div class="panel-body">0</div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="panel panel-success">
+          <div class="panel-heading"><h3 class="panel-title">Median Monthly Income</h3></div>
+          <div class="panel-body">{{averageMonthlyIncome}}</div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="panel panel-danger">
+          <div class="panel-heading"><h3 class="panel-title">Median Monthly Expense</h3></div>
+          <div class="panel-body">{{averageMonthlyExpense}}</div>
+        </div>
+      </div>
+
+    </div>
+
+    <!--<div class="row">-->
+      <!--<div>-->
+        <!--<p>Income / Fixed Expenses / General Expenses / Profit</p>-->
+      <!--</div>-->
+      <!--<div>-->
+        <!--<div class="progress">-->
+          <!--<div class="progress-bar progress-bar-success progress-bar-striped" style="width: 35%">-->
+            <!--<span class="sr-only">35% Complete (success)</span>-->
+          <!--</div>-->
+          <!--<div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 20%">-->
+            <!--<span class="sr-only">20% Complete (warning)</span>-->
+          <!--</div>-->
+          <!--<div class="progress-bar progress-bar-danger progress-bar-striped" style="width: 10%">-->
+            <!--<span class="sr-only">10% Complete (danger)</span>-->
+          <!--</div>-->
+          <!--<div class="progress-bar progress-bar-info progress-bar-striped" style="width: 10%">-->
+            <!--<span class="sr-only">10% Complete (danger)</span>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+
+  </div>
+
   <div class="row">
     <table st-table="gridOptions.data" st-safe-src="transactionsStats" class="table table-striped">
       <thead>
