--- a/webApp/src/main/resources/static/views/transactions.html
+++ b/webApp/src/main/resources/static/views/transactions.html
@@ -12,18 +12,32 @@
         <th>Date</th>
         <th>Description</th>
         <th>Cost</th>
+        <th>Tags</th>
       </tr>
       <tr>
         <th><input st-search="date" placeholder="search for date" class="input-sm form-control" type="search"/></th>
         <th><input st-search="description" placeholder="search for description" class="input-sm form-control" type="search"/></th>
         <th><input st-search="cost" placeholder="search for cost" class="input-sm form-control" type="search"/></th>
+        <th><input st-search="tags" placeholder="Search for tags" class="input-sm form-control" type="search"/></th>
       </tr>
       </thead>
       <tbody>
         <tr data-ng-repeat="transaction in gridOptions.data">
-          <td style="width:20%;">{{transaction.date}}</td>
-          <td style="width:60%;">{{transaction.description}}</td>
-          <td style="width:20%;">{{transaction.cost}}</td>
+          <td style="width:15%;">{{transaction.date}}</td>
+          <td style="width:40%;">
+            <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#TransactionActions">
+              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            </button>
+            {{transaction.description}}</td>
+          <td style="width:15%;">{{transaction.cost}}</td>
+          <td style="width:30%;">
+            <!--<span class="label label-default">Default</span>-->
+            <!--<span class="label label-primary">Primary</span>-->
+            <span class="label label-success">Success</span>
+            <!--<span class="label label-info">Info</span>-->
+            <!--<span class="label label-warning">Warning</span>-->
+            <!--<span class="label label-danger">Danger</span>-->
+          </td>
         </tr>
       </tbody>
       <tfoot>
@@ -37,4 +51,46 @@
   </div>
 
 </div>
+
+<div id="TransactionActions" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Run Transaction Form</h4>
+      </div>
+
+      <div class="modal-body">
+        <div class="row col-md-12">
+          <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+        </div>
+        <div class="row col-md-12">
+          <button class="btn btn-default btn-xs">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+          </button>
+          <div class="dropdown">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="true">
+              Dropdown
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu btn-xs" aria-labelledby="dropdownMenu1">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
