--- a/webApp/src/main/resources/static/views/transactions.html
+++ b/webApp/src/main/resources/static/views/transactions.html
@@ -1,18 +1,13 @@
 <div class="container" role="main" class="main">
-  <!--<div class="row">-->
-    <!--<div class="starter-template">-->
-        <!--<div id="grid2" ui-grid="gridOptions" ui-grid-exporter class="grid"></div>-->
-    <!--</div>-->
-  <!--</div>-->
 
   <div class="row">
     <table st-table="gridOptions.data" st-safe-src="transactions" class="table table-striped">
       <thead>
       <tr>
-        <th>Date</th>
-        <th>Description</th>
-        <th>Cost</th>
-        <th>Tags</th>
+        <td st-sort="date">Date</td>
+        <td st-sort="description">Description</td>
+        <td st-sort="cost">Cost</td>
+        <td>Tags</td>
       </tr>
       <tr>
         <th><input st-search="date" placeholder="search for date" class="input-sm form-control" type="search"/></th>
@@ -24,19 +19,15 @@
       <tbody>
         <tr data-ng-repeat="transaction in gridOptions.data">
           <td style="width:15%;">{{transaction.date}}</td>
-          <td style="width:40%;">
-            <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#TransactionActions">
-              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-            </button>
-            {{transaction.description}}</td>
+          <td style="width:40%;">{{transaction.description}}</td>
           <td style="width:15%;">{{transaction.cost}}</td>
           <td style="width:30%;">
-            <!--<span class="label label-default">Default</span>-->
-            <!--<span class="label label-primary">Primary</span>-->
-            <span class="label label-success">Success</span>
-            <!--<span class="label label-info">Info</span>-->
-            <!--<span class="label label-warning">Warning</span>-->
-            <!--<span class="label label-danger">Danger</span>-->
+            <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#TransactionActions" ng-click="setDescriptionToModal(transaction.description)">
+              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            </button>
+            <span class="label label-info" data-ng-repeat="tag in transaction.tags track by $index">
+              {{tag}}
+            </span>
           </td>
         </tr>
       </tbody>
@@ -54,42 +45,35 @@
 
 <div id="TransactionActions" class="modal fade" role="dialog">
   <div class="modal-dialog">
+
+    <form novalidate class="simple-form">
     <div class="modal-content">
 
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Run Transaction Form</h4>
+        <h4 class="modal-title">Set tags to transaction</h4>
       </div>
 
       <div class="modal-body">
-        <div class="row col-md-12">
-          <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
-        </div>
-        <div class="row col-md-12">
-          <button class="btn btn-default btn-xs">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-          </button>
-          <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="true">
-              Dropdown
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu btn-xs" aria-labelledby="dropdownMenu1">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </div>
-        </div>
+        <input type="text" class="form-control" placeholder="Transaction description" value="{{tagDescription}}"
+               aria-describedby="basic-addon1"
+                ng-model="tagDescription">
+        <tags-input
+                class="bootstrap"
+                ng-model="transactionTags"
+                placeholder="Choose tag"
+                display-property="text"
+                replace-spaces-with-dashes="false"
+                add-on-paste="true"></tags-input>
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-info" ng-click="resetTags()">Reset Tags</button>
+        <button type="button" class="btn btn-primary" ng-click="saveTagsForDescription(tagDescription, transactionTags)">Save changes</button>
       </div>
     </div>
+    </form>
   </div>
 </div>
 
