--- a/webApp/src/main/resources/static/views/transactions.html
+++ b/webApp/src/main/resources/static/views/transactions.html
@@ -13,23 +13,44 @@
   </div>
 
   <div class="row">
-    <table st-table="gridOptions.data" st-safe-src="transactions" class="table table-striped">
+    <table class="table table-bordered table-striped">
       <thead>
       <tr>
-        <td st-sort="date">Date</td>
-        <td st-sort="description">Description</td>
-        <td st-sort="cost">Cost</td>
+        <td>
+          <a href="/#/Transactions" ng-click="sortType = 'date'; sortReverse = !sortReverse ">
+            Date
+            <span ng-show="sortType == 'date' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'date' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
+        <td>
+          <a href="/#/Transactions" ng-click="sortType = 'description'; sortReverse = !sortReverse">
+            Description
+            <span ng-show="sortType == 'description' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'description' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
+        <td>
+          <a href="/#/Transactions" ng-click="sortType = 'cost'; sortReverse = !sortReverse">
+            Cost
+            <span ng-show="sortType == 'cost' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'cost' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
         <td>Tags</td>
       </tr>
       <tr>
-        <th><input st-search="date" placeholder="search for date" class="input-sm form-control" type="search"/></th>
-        <th><input st-search="description" placeholder="search for description" class="input-sm form-control" type="search"/></th>
-        <th><input st-search="cost" placeholder="search for cost" class="input-sm form-control" type="search"/></th>
-        <th><input st-search="tags" placeholder="Search for tags" class="input-sm form-control" type="search"/></th>
+        <th><input class="input-sm form-control" type="search" placeholder="search for date"        ng-model="searchDate"/></th>
+        <th><input class="input-sm form-control" type="search" placeholder="search for description" ng-model="searchDescription"/></th>
+        <th><input class="input-sm form-control" type="search" placeholder="search for cost"        ng-model="searchCost"/></th>
+        <th><input class="input-sm form-control" type="search" placeholder="Search for tags"        ng-model="searchTag"/></th>
       </tr>
       </thead>
       <tbody>
-        <tr data-ng-repeat="transaction in gridOptions.data">
+        <tr dir-paginate="transaction in transactions
+        | orderBy:sortType:sortReverse
+        | filter: { date:searchDate, description:searchDescription, cost:searchCost, tags:searchTag }
+        | itemsPerPage: 20">
           <td style="width:15%;">{{transaction.date}}</td>
           <td style="width:40%;">{{transaction.description}}</td>
           <td style="width:15%;">{{transaction.cost}}</td>
@@ -43,14 +64,15 @@
           </td>
         </tr>
       </tbody>
-      <tfoot>
-      <tr>
-        <td colspan="7" class="text-center">
-          <div st-pagination="" st-items-by-page="15" st-displayed-pages="10"></div>
-        </td>
-      </tr>
-      </tfoot>
+      <tfoot></tfoot>
     </table>
+
+      <dir-pagination-controls
+          max-size="5"
+          direction-links="true"
+          boundary-links="true">
+      </dir-pagination-controls>
+
   </div>
 
 </div>
